--- a/app/views/home/page.html.erb
+++ b/app/views/home/page.html.erb
@@ -1,2 +1,8 @@
+<div class="container-fluid">
+    <form class="d-flex search-bar">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
+</div>
 <h1>Home#page</h1>
 <p>Find me in app/views/home/page.html.erb</p>
